addded delete button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container" >
        <div class="ui">
         <h1 >TO DO LIST</h1>
-            <input type="text" id="tobox">
+        
+        <box-icon name='list-ul'></box-icon>
+            <input type="text" placeholder="Please enter your tastk ." id="tobox">
             <input type="button" value="ADD"  id="add">
             <br>
             <br>
